--- a/indext.html
+++ b/indext.html
@@ -17,7 +17,7 @@
 <!-- font aweesome libraryCVBNM.  
 * -->
 <link rel="stylesheet" href="cc/all.min.css">
-    <title>Document</title>
+    <title>Project1</title>
 </head>
 
 
@@ -26,7 +26,7 @@
         <div class="div2">
     <button class="btn1">sing in</button>
     <button class="btn2">sing up</button>
-    <h1>Be silent like deep water</h1>
+    <h1>Coffee is the best thing to douse the sunrise with</h1>
         </div>
     </div>
 </body>  
